@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_feature.cpp,v 1.71 2007-06-11 17:57:06 dmorissette Exp $
+ * $Id: mitab_feature.cpp,v 1.72 2007-06-12 14:17:16 dmorissette Exp $
  *
  * Name:     mitab_feature.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -30,7 +30,11 @@
  **********************************************************************
  *
  * $Log: mitab_feature.cpp,v $
- * Revision 1.71  2007-06-11 17:57:06  dmorissette
+ * Revision 1.72  2007-06-12 14:17:16  dmorissette
+ * Added TABFile::TwoPointLineAsPolyline() to allow writing two point lines
+ * as polylines (bug 1735)
+ *
+ * Revision 1.71  2007/06/11 17:57:06  dmorissette
  * Removed stray calls to poMapFile->GetCurObjBlock()
  *
  * Revision 1.70  2007/06/11 14:52:30  dmorissette
@@ -1552,6 +1556,7 @@ TABPolyline::TABPolyline(OGRFeatureDefn *poDefnIn):
 {
     m_bCenterIsSet = FALSE;
     m_bSmooth = FALSE;
+    m_bWriteTwoPointLineAsPolyline = FALSE;
 }
 
 /**********************************************************************
@@ -1698,10 +1703,17 @@ int  TABPolyline::ValidateMapInfoType(TABMAPFile *poMapFile /*=NULL*/)
         {
             m_nMapInfoType = TAB_GEOM_PLINE;
         }
-        else if ( poLine->getNumPoints() == 2 )
+        else if ( (poLine->getNumPoints() == 2) && 
+                  (m_bWriteTwoPointLineAsPolyline == TRUE) )
+        {
+           m_nMapInfoType = TAB_GEOM_PLINE;
+        }
+        else if ( (poLine->getNumPoints() == 2) && 
+                  (m_bWriteTwoPointLineAsPolyline == FALSE) )
         {
             m_nMapInfoType = TAB_GEOM_LINE;
         }
+        // [/Safe Software]
         else
         {
             CPLError(CE_Failure, CPLE_AssertionFailed,
@@ -2521,6 +2533,25 @@ void TABPolyline::SetCenter(double dX, double dY)
     m_bCenterIsSet = TRUE;
 }
 
+/**********************************************************************
+ *                   TABPolyline::TwoPointLineAsPolyline()
+ *
+ * Returns the value of m_bWriteTwoPointLineAsPolyline
+ **********************************************************************/
+GBool TABPolyline::TwoPointLineAsPolyline()
+{
+    return m_bWriteTwoPointLineAsPolyline;
+}
+
+/**********************************************************************
+*                   TABPolyline::TwoPointLineAsPolyline()
+*
+* Sets the value of m_bWriteTwoPointLineAsPolyline
+**********************************************************************/
+void TABPolyline::TwoPointLineAsPolyline(GBool bTwoPointLineAsPolyline)
+{
+    m_bWriteTwoPointLineAsPolyline = bTwoPointLineAsPolyline;
+}
 
 /*=====================================================================
  *                      class TABRegion
