@@ -26,6 +26,9 @@ CHANGES - Current Version:
 
 - Added IMapInfoFile::SetCharset() method (bug 1734)
 
+- Added TABFile::TwoPointLineAsPolyline() to allow writing two point lines
+  as polylines (bug 1735)
+
 - Fixed memory leak when writing .TAB with new (optimized) spatial index
   introduced in v1.6.0 (bug 1725)
 
@@ -791,5 +794,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.183 2007-06-12 13:52:37 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.184 2007-06-12 14:17:16 dmorissette Exp $
 ------------
